{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 86,
  "lineage": "2e90ebb7-1b07-4785-61e5-c2d77d6441fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c2abbbe8af9a7e6",
            "arn": "arn:aws:ec2:eu-west-3:857044413867:instance/i-0962a1499037bb20d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0962a1499037bb20d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b2b20e2a8f22562",
            "private_dns": "ip-10-0-10-75.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.75",
            "public_ip": "13.38.100.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059d9b7716d5eacb1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afcabc673be3cce7",
            "tags": {
              "name": "dev-server"
            },
            "tags_all": {
              "name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04185c22a3a40b085"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.mk-app-subnet",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:857044413867:internet-gateway/igw-0c5893d69d0e1b0ee",
            "id": "igw-0c5893d69d0e1b0ee",
            "owner_id": "857044413867",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a45e4d89953b6e74"
          },
          "dependencies": [
            "aws_vpc.mk-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:857044413867:route-table/rtb-0dc8ecafc502f8a95",
            "id": "rtb-0dc8ecafc502f8a95",
            "owner_id": "857044413867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5893d69d0e1b0ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb"
            },
            "tags_all": {
              "Name": "dev-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45e4d89953b6e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.mk-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008e7c13fb6201ee7",
            "route_table_id": "rtb-0dc8ecafc502f8a95",
            "subnet_id": "subnet-0afcabc673be3cce7"
          },
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_route_table.my-app-route-table",
            "aws_subnet.mk-app-subnet",
            "aws_vpc.mk-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:857044413867:security-group/sg-04185c22a3a40b085",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04185c22a3a40b085",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "154.192.32.159/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-app-sg",
            "name_prefix": "",
            "owner_id": "857044413867",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "dev-sg"
            },
            "tags_all": {
              "name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45e4d89953b6e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mk-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mk-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:857044413867:subnet/subnet-0afcabc673be3cce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afcabc673be3cce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857044413867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-0a45e4d89953b6e74"
          },
          "dependencies": [
            "aws_vpc.mk-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mk-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:857044413867:vpc/vpc-0a45e4d89953b6e74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0298f833ec34f2fbf",
            "default_route_table_id": "rtb-0b3e8dfee0d6d0aa8",
            "default_security_group_id": "sg-060246591fcd63444",
            "dhcp_options_id": "dopt-c10e32a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a45e4d89953b6e74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3e8dfee0d6d0aa8",
            "owner_id": "857044413867",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}